lstyle.css
body {
  background: linear-gradient(to bottom, #ffffff 0%, #29c85f 100%);
  background-repeat: no-repeat;
  background-size: cover;
  font-family: "Helvetica", "Arial", "system-ui", "sans-serif";
  margin: 0;
}

h1 {
  text-align: center;
}

.tellr {
  text-align: left;
}

input {
  float: right;
}

